[package]
name = "throwsterhouse-five"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.126", features=["derive"] }
tokio = { version="1.7.1", features = ["full"] }
anyhow = "1.0.41"
envy = "0.4.2"
futures-util = "0.3.8"
futures-channel = "0.3.8"
tracing = "0.1.36"
tracing-subscriber = "0.3"
quinn = "*"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"
rustls-pemfile = "1.0.1"
futures = "0.3.24"
